Updated to v0.1.8 Added alt+arrow move lines function for notes Added alt+shift+arrow copy line function to notes Added arrow as new line start string Change background while bg img is loading to be light when user has light mode on Disabled spellcheck on notes when not focused Fixed notes not saving on space Fixed arrow at start of note

--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -12,6 +12,8 @@ body
     background-position: center center
     background-size: cover
     background: #3d3d3d
+    @media (prefers-color-scheme: light)
+        background: #999
 
 #content_wrapper
     --padding: 5vmin
@@ -417,6 +419,9 @@ body
 
     .text_wrapper
         display: inline-block
+
+        &>span, &>a
+            white-space: pre
 
         a
             overflow-wrap: break-word
